# expense-tracker

./: .gitignore  Makefile  README.md  docker-compose.yml  finance_ledger.db  pyproject.toml  renovate.json  requirements.txt  test_uv.sh
.github/: dependabot.yml
.github/workflows/: cd-docker-build.yml  cd-gitops-sync.yml  ci-frontend.yml  ci-python.yml  ci.yml  production-readiness.yml
apps/mobile-mxp/: README.md  pubspec.yaml
apps/mobile-mxp/android/app/: build.gradle.kts
apps/mobile-mxp/ios/Runner/: Info.plist
apps/mobile-mxp/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile-mxp/lib/: main.dart
apps/mobile-mxp/lib/extensions/: mock_auth_extension.dart
apps/mobile-mxp/lib/services/: security_service.dart  sync_service.dart  vision_service.dart  (+1 more)
apps/mobile-mxp/linux/: CMakeLists.txt
apps/mobile-mxp/test/: widget_test.dart
apps/mobile-mxp/web/: index.html  manifest.json
apps/mobile-mxp/windows/: CMakeLists.txt
backend/: database.js  expenses.sqlite  index.js
docs/: developer-guide.md
docs/adr/: 001-use-uv-workspaces.md
frontend/src/: App.jsx  index.css
infrastructure/docker/: Dockerfile.node.prod  Dockerfile.python.dev  Dockerfile.python.prod
infrastructure/gitops/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml
infrastructure/gitops/templates/: apps.yaml
infrastructure/observability/dashboards/: pfos-platform.yaml
scripts/: setup-local.sh
src/: main.py
src/agent_platform/: services.py
src/ai_ops/: services.py
src/ai_platform/: services.py
src/application/: auth_service.py  dashboard_service.py  services.py
src/automation/: engine.py  rules.py  validation.py
src/domain/: enums.py  schemas.py
src/infrastructure/: database.py  models.py  repositories.py
src/ingestion/: connectors.py  pipeline.py  storage.py
src/intelligence_engine/: services.py
src/knowledge_graph/: context_builder.py  database.py  sync_service.py
src/presentation/: api.py
src/sdk/agent/: interfaces.py
src/sdk/common/: events.py  exceptions.py
src/sdk/financial/: interfaces.py
tests/: test_agent_platform.py  test_ai_ops.py  test_ai_platform.py  test_api.py  test_automation.py  test_ingestion.py  test_intelligence.py  test_intelligence_engine.py  test_knowledge_graph.py  test_reconciliation.py  test_sdk.py  test_transactions.py  test_validation.py  test_wave1.py
tmp_storage/: 498bdb5f-f933-4026-a5ab-1d71b687e394_statement.csv
(+51 files in other folders)
