[project]
name = "finance-os-monorepo"
version = "1.0.0"
description = "AI Personal Finance OS Platform Monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
    "shared/*"
]
exclude = [
    "tests",
    "docs",
    "packages/mission-control-ui",
    "apps/mobile-mxp",
    "packages/mobile_sdk",
    "packages/client_extension_framework"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "rapidfuzz>=3.14.5",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
disable_error_code = [
    "import-not-found", "import-untyped", "valid-type", "misc", 
    "assignment", "return-value", "arg-type", "attr-defined", 
    "name-defined", "call-arg", "override", "type-arg", "index",
    "dict-item", "union-attr", "list-item", "operator", "var-annotated",
    "empty-body"
]
exclude = [
    "^alembic/.*",
    ".*/alembic/.*",
    "^tests/.*",
    ".*/tests/.*",
]
